--- a/ExamenFinal/index.html
+++ b/ExamenFinal/index.html
@@ -153,7 +153,7 @@
     <footer>
         <section>
             <div>
-                <form>
+                <form action="#">
                     <label class="estilo" for="GO"> Updates in your inbox...</label>
                     <button class="botonGO" type="submit" id="GO">GO</button>
                 </form>
@@ -161,6 +161,7 @@
         </section>
 
         <section class="ordenlistas">
+            <!--SACAR LOS NAV NO SON NAVEGACIONES-->
             <div>
                 <nav class="lista">
                     <ul type='none'>
@@ -182,13 +183,14 @@
             </div>
         </section>
 
-        <section>
+        <section class="iconos">
             <div class="i">
                 <a href="https://www.facebook.com/" target="blank"><img src="./imagenes/icon-facebook.svg"></a>
                 <a href="https://www.youtube.com/" target="blank"><img src="./imagenes/icon-youtube.svg"></a>
                 <a href="https://twitter.com/" target="blank"><img src="./imagenes/icon-twitter.svg"></a>
                 <a href="https://ar.pinterest.com/" target="blank"><img src="./imagenes/icon-pinterest.svg"></a>
                 <a href="https://www.instagram.com/" target="blank"><img src="./imagenes/icon-instagram.svg"></a>
+
             </div>    
             <div>
                 <img class="logo1" src="./imagenes/LogoBlanco.png">
@@ -196,8 +198,10 @@
             
 
         </section>
-
-        <p class="derechos">Copyright 2020. All Rights Reserved</p>
+        <section>
+            <p class="derechos">Copyright 2020. All Rights Reserved</p>
+        </section>
+        
 
     </footer>
 
